--- a/examples/install.yaml
+++ b/examples/install.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: crossplane-provider-jet-tencentcloud
 spec:
-  image: crossplane/provider-jet-tencentcloud-controller:v0.1.0
+  image: harbor.internal.moqi.ai/mqdb/provider-jet-tencentcloud-controller-amd64:v0.1
   args: ["-d"]
 ---
 apiVersion: pkg.crossplane.io/v1
@@ -14,6 +14,6 @@ kind: Provider
 metadata:
   name: crossplane-provider-jet-tencentcloud
 spec:
-  package: crossplane/provider-jet-tencentcloud:v0.1.0
+  package: harbor.internal.moqi.ai/mqdb/provider-jet-tencentcloud-amd64:v0.1
   controllerConfigRef:
     name: jet-tencentcloud-config
