--- a/package/crds/eks.tencentcloud.jet.crossplane.io_clusters.yaml
+++ b/package/crds/eks.tencentcloud.jet.crossplane.io_clusters.yaml
@@ -140,6 +140,31 @@ spec:
                   serviceSubnetId:
                     description: Subnet id of service.
                     type: string
+                  subnetIdRefs:
+                    items:
+                      description: A Reference to a named object.
+                      properties:
+                        name:
+                          description: Name of the referenced object.
+                          type: string
+                      required:
+                      - name
+                      type: object
+                    type: array
+                  subnetIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                   subnetIds:
                     description: Subnet Ids for EKS cluster.
                     items:
@@ -153,11 +178,32 @@ spec:
                   vpcId:
                     description: Vpc Id of EKS cluster.
                     type: string
+                  vpcIdRefs:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  vpcIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                 required:
                 - clusterName
                 - k8sVersion
-                - subnetIds
-                - vpcId
                 type: object
               providerConfigRef:
                 default:
