--- a/examples/subnet/subnet.yaml
+++ b/examples/subnet/subnet.yaml
@@ -3,9 +3,32 @@ apiVersion: subnet.tencentcloud.jet.crossplane.io/v1alpha1
 kind: Subnet
 metadata:
   name: test-subnet1
+  labels:
+    provider: crossplane-provider-jet-tencentcloud
+    app: test
 spec:
   forProvider:
     availabilityZone: ap-beijing-5
     cidrBlock: 10.2.11.0/24
     name: test-subnet1
-    vpcId: your-vpc-id
+    vpcIdSelector:
+      matchLabels:
+        provider: crossplane-provider-jet-tencentcloud
+        app: test
+---
+apiVersion: subnet.tencentcloud.jet.crossplane.io/v1alpha1
+kind: Subnet
+metadata:
+  name: test-subnet2
+  labels:
+    provider: crossplane-provider-jet-tencentcloud
+    app: test
+spec:
+  forProvider:
+    availabilityZone: ap-beijing-6
+    cidrBlock: 10.2.10.0/24
+    name: test-subnet2
+    vpcIdSelector:
+      matchLabels:
+        provider: crossplane-provider-jet-tencentcloud
+        app: test
