--- a/examples/vpc/vpc.yaml
+++ b/examples/vpc/vpc.yaml
@@ -2,6 +2,9 @@ apiVersion: vpc.tencentcloud.jet.crossplane.io/v1alpha1
 kind: VPC
 metadata:
   name: test-vpc
+  labels:
+    provider: crossplane-provider-jet-tencentcloud
+    app: test
 spec:
   forProvider:
     cidrBlock: "10.2.0.0/16"
