--- a/package/crds/subnet.tencentcloud.jet.crossplane.io_subnets.yaml
+++ b/package/crds/subnet.tencentcloud.jet.crossplane.io_subnets.yaml
@@ -89,11 +89,33 @@ spec:
                   vpcId:
                     description: ID of the VPC to be associated.
                     type: string
+                  vpcIdRefs:
+                    description: A Reference to a named object.
+                    properties:
+                      name:
+                        description: Name of the referenced object.
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  vpcIdSelector:
+                    description: A Selector selects an object.
+                    properties:
+                      matchControllerRef:
+                        description: MatchControllerRef ensures an object with the
+                          same controller reference as the selecting object is selected.
+                        type: boolean
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: MatchLabels ensures an object with matching labels
+                          is selected.
+                        type: object
+                    type: object
                 required:
                 - availabilityZone
                 - cidrBlock
                 - name
-                - vpcId
                 type: object
               providerConfigRef:
                 default:
