--- a/examples/install.yaml
+++ b/examples/install.yaml
@@ -7,6 +7,7 @@ metadata:
     app: crossplane-provider-tencentcloud
 spec:
   image: harbor.internal.moqi.ai/mqdb/provider-tencentcloud-controller:v0.2
+  imagePullPolicy: Always
   args: ["-d"]
 ---
 apiVersion: pkg.crossplane.io/v1
