add kubernetes cluster example yaml file

--- a/examples/kubernetes/cluster.yaml
+++ b/examples/kubernetes/cluster.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: kubernetes.tencentcloud.jet.crossplane.io/v1alpha1
 kind: Cluster
 metadata:
@@ -36,6 +37,51 @@ spec:
         enhancedMonitorService: False
         enhancedSecurityService: False
         userData: dXNlcgo=
+        passwordSecretRef:
+          key: password
+          name: test-cluster
+          namespace: crossplane-system
+---
+apiVersion: nodepool.tencentcloud.jet.crossplane.io/v1alpha1
+kind: NodePool
+metadata:
+  name: test-nodepool
+spec:
+  forProvider:
+    name: test-nodepool
+    clusterIdSelector:
+      matchLabels:
+        provider: crossplane-provider-jet-tencentcloud
+        app: test
+    maxSize: 6
+    minSize: 1
+    vpcIdSelector:
+      matchLabels:
+        provider: crossplane-provider-jet-tencentcloud
+        app: test
+    subnetIdSelector:
+      matchLabels:
+        provider: crossplane-provider-jet-tencentcloud
+        app: test
+    retryPolicy: INCREMENTAL_INTERVALS
+    enable_auto_scale: true
+    autoScalingConfig:
+      - instanceType: S1.SMALL1
+        systemDiskType: CLOUD_PREMIUM
+        systemDiskSize: 50
+        internetChargeType: TRAFFIC_POSTPAID_BY_HOUR
+        internetMaxBandwidthOut: 10
+        publicIpAssigned: true
+        enhancedMonitorService: False
+        enhancedSecurityService: False
+        passwordSecretRef:
+          key: password
+          name: test-cluster
+          namespace: crossplane-system
+        dataDisk:
+          - diskType: CLOUD_PREMIUM
+            diskSize: 50
+
 
 
 
