--- a/examples/nodepool/nodepool.yaml
+++ b/examples/nodepool/nodepool.yaml
@@ -4,12 +4,12 @@ metadata:
   name: test-nodepool
 spec:
   forProvider:
-    name: test-nodepool
+    name: test-nodepool-crossplane
     clusterIdSelector:
       matchLabels:
         provider: crossplane-provider-jet-tencentcloud
         app: test
-    maxSize: 6
+    maxSize: 5
     minSize: 1
     vpcIdSelector:
       matchLabels:
@@ -21,12 +21,16 @@ spec:
         app: test
     retryPolicy: INCREMENTAL_INTERVALS
     enableAutoScale: true
+    deleteKeepInstance: false
     autoScalingConfig:
-      - instanceType: S1.SMALL1
+      - instanceType: SA2.2XLARGE16
         systemDiskType: CLOUD_PREMIUM
         systemDiskSize: 50
         enhancedMonitorService: False
         enhancedSecurityService: False
+        publicIpAssigned: false
+        securityGroupIds:
+          - sg-09c6ckwj
         passwordSecretRef:
           key: password
           name: test-cluster
@@ -34,3 +38,4 @@ spec:
         dataDisk:
           - diskType: CLOUD_PREMIUM
             diskSize: 50
+            deleteWithInstance: true
