--- a/examples/subnet/subnet.yaml
+++ b/examples/subnet/subnet.yaml
@@ -9,7 +9,7 @@ spec:
   forProvider:
     availabilityZone: ap-beijing-5
     cidrBlock: 10.2.11.0/24
-    name: test-subnet1
+    name: test-crossplane-subnet1
     vpcIdSelector:
       matchLabels:
         provider: crossplane-provider-jet-tencentcloud
